--- a/arch/arm64/boot/dts/qcom/taco/common/msm8953.dtsi
+++ b/arch/arm64/boot/dts/qcom/taco/common/msm8953.dtsi
@@ -11,7 +11,7 @@
  * GNU General Public License for more details.
  */
 
-#include "skeleton64.dtsi"
+#include "../../skeleton64.dtsi"
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/spmi/spmi.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
@@ -74,19 +74,19 @@
 		modem_mem: modem_region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x86c00000 0x0 0x6a00000>;
+			reg = <0x0 0x86c00000 0x0 0x6000000>;
 		};
 
 		adsp_fw_mem: adsp_fw_region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x8d600000 0x0 0x1100000>;
+			reg = <0x0 0x8cc00000 0x0 0x1800000>;
 		};
 
 		wcnss_fw_mem: wcnss_fw_region@0 {
 			compatible = "removed-dma-pool";
 			no-map;
-			reg = <0x0 0x8e700000 0x0 0x700000>;
+			reg = <0x0 0x8e400000 0x0 0x1000000>;
 		};
 
 		venus_mem: venus_region@0 {
@@ -182,6 +182,8 @@
 		i2c2 = &i2c_2;
 		i2c3 = &i2c_3;
 		i2c5 = &i2c_5;
+		i2c6 = &i2c_6;
+		i2c8 = &i2c_8; /*audio bring up zhangjianming2.wt */
 		spi3 = &spi_3;
 		spi6 = &spi_6;
 	};
@@ -201,17 +203,17 @@
 
 };
 
-#include "msm8953-pinctrl.dtsi"
-#include "msm8953-cpu.dtsi"
-#include "msm8953-pm.dtsi"
-#include "msm8953-bus.dtsi"
-#include "msm8953-ion.dtsi"
-#include "msm-arm-smmu-8953.dtsi"
-#include "msm8953-vidc.dtsi"
-#include "msm8953-gpu.dtsi"
-#include "msm8953-mdss.dtsi"
-#include "msm8953-mdss-pll.dtsi"
-#include "msm8953-smp2p.dtsi"
+#include "../../msm8953-pinctrl.dtsi"
+#include "../../msm8953-cpu.dtsi"
+#include "../../msm8953-pm.dtsi"
+#include "../../msm8953-bus.dtsi"
+#include "../../msm8953-ion.dtsi"
+#include "../../msm-arm-smmu-8953.dtsi"
+#include "../../msm8953-vidc.dtsi"
+#include "../../msm8953-gpu.dtsi"
+#include "../../msm8953-mdss.dtsi"
+#include "../../msm8953-mdss-pll.dtsi"
+#include "../../msm8953-smp2p.dtsi"
 
 &soc {
 	#address-cells = <1>;
@@ -388,6 +390,7 @@
 		qcom,msm-bus,num-cases = <4>;
 		qcom,msm-bus,num-paths = <1>;
 		qcom,support-bus-scaling;
+		qcom,appsbl-qseecom-support;
 		qcom,msm-bus,vectors-KBps =
 			<55 512 0 0>,
 			<55 512 0 0>,
@@ -777,6 +780,60 @@
 		status = "disabled";
 	};
 
+        /*audio bring up zhangjianming2.wt  start */
+	i2c_6: i2c@7af6000 { /* BLSP2 QUP1 */
+		compatible = "qcom,i2c-msm-v2";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg-names = "qup_phys_addr";
+		reg = <0x7af6000 0x600>;
+		interrupt-names = "qup_irq";
+		interrupts = <0 300 0>;
+		qcom,clk-freq-out = <100000>;
+		qcom,clk-freq-in  = <19200000>;
+		clock-names = "iface_clk", "core_clk";
+		clocks = <&clock_gcc clk_gcc_blsp2_ahb_clk>,
+			<&clock_gcc clk_gcc_blsp2_qup2_i2c_apps_clk>;
+
+		pinctrl-names = "i2c_active", "i2c_sleep";
+		pinctrl-0 = <&i2c_6_active>;
+		pinctrl-1 = <&i2c_6_sleep>;
+		qcom,noise-rjct-scl = <1>;
+		qcom,noise-rjct-sda = <1>;
+		qcom,master-id = <84>;
+		dmas = <&dma_blsp2 6 64 0x20000020 0x20>,
+			<&dma_blsp2 7 32 0x20000020 0x20>;
+		dma-names = "tx", "rx";
+		status = "ok";
+	};
+
+        /*audio bring up zhangjianming2.wt  start */
+	i2c_8: i2c@7af8000 { /* BLSP2 QUP4 */
+				compatible = "qcom,i2c-msm-v2";
+				#address-cells = <1>;
+				#size-cells = <0>;
+				reg-names = "qup_phys_addr";
+				reg = <0x7af8000 0x600>;
+				interrupt-names = "qup_irq";
+				interrupts = <0 302 0>;
+				qcom,clk-freq-out = <400000>;
+				qcom,clk-freq-in  = <19200000>;
+				clock-names = "iface_clk", "core_clk";
+				clocks = <&clock_gcc clk_gcc_blsp2_ahb_clk>,
+				 <&clock_gcc clk_gcc_blsp2_qup4_i2c_apps_clk>;
+
+				pinctrl-names = "i2c_active", "i2c_sleep";
+				pinctrl-0 = <&i2c_8_active>;
+				pinctrl-1 = <&i2c_8_sleep>;
+				qcom,noise-rjct-scl = <0>;
+				qcom,noise-rjct-sda = <0>;
+				qcom,master-id = <84>;
+				dmas = <&dma_blsp2 10 64 0x20000020 0x20>,
+				<&dma_blsp2 11 32 0x20000020 0x20>;
+				dma-names = "tx", "rx";
+		};
+	/*audio bring up zhangjianming2.wt  end */
+
 	slim_msm: slim@c140000{
 		cell-index = <1>;
 		compatible = "qcom,slim-ngd";
@@ -847,10 +904,10 @@
 		reg =	 <0xb114000  0x68>,
 			 <0xb014000  0x68>,
 			 <0xb116000  0x400>,
-			 <0xb111050  0x08>,
-			 <0xb011050  0x08>,
-			 <0xb1d1050  0x08>,
-			 <0x00a4124  0x08>;
+			 <0xb111050  0x0b>,
+			 <0xb011050  0x0b>,
+			 <0xb1d1050  0x0b>,
+			 <0x00a4124  0x0b>;
 		reg-names = "rcgwr-c0-base", "rcgwr-c1-base",
 				"c0-pll", "c0-mux", "c1-mux",
 				"cci-mux", "efuse";
@@ -867,7 +924,12 @@
 			< 1689600000 4>,
 			< 1804800000 5>,
 			< 1958400000 6>,
-			< 2016000000 7>;
+			< 2016000000 7>,
+			< 2208000000 8>,
+			< 2400000000 9>,
+			< 2649000000 10>,
+			< 2841000000 11>,
+			< 3033600000 12>;
 		qcom,speed0-bin-v0-cci =
 			<          0 0>,
 			<  261120000 1>,
@@ -876,7 +938,12 @@
 			<  675840000 4>,
 			<  721920000 5>,
 			<  783360000 6>,
-			<  806400000 7>;
+			<  806400000 7>,
+			<  860160000 8>,
+			<  883200000 9>,
+			<  883200000 10>,
+			<  883200000 11>,
+			<  883200000 12>;
 		qcom,speed2-bin-v0-cl =
 			<          0 0>,
 			<  652800000 1>,
@@ -885,7 +952,12 @@
 			< 1689600000 4>,
 			< 1804800000 5>,
 			< 1958400000 6>,
-			< 2016000000 7>;
+			< 2016000000 7>,
+			< 2208000000 8>,
+			< 2400000000 9>,
+			< 2649000000 10>,
+			< 2841000000 11>,
+			< 3033600000 12>;
 		qcom,speed2-bin-v0-cci =
 			<          0 0>,
 			<  261120000 1>,
@@ -894,7 +966,12 @@
 			<  675840000 4>,
 			<  721920000 5>,
 			<  783360000 6>,
-			<  806400000 7>;
+			<  806400000 7>,
+			<  860160000 8>,
+			<  883200000 9>,
+			<  883200000 10>,
+			<  883200000 11>,
+			<  883200000 12>;
 		qcom,speed7-bin-v0-cl =
 			<          0 0>,
 			<  652800000 1>,
@@ -947,6 +1024,10 @@
 			 <&clock_cpu clk_a53_pwr_clk>,
 			 <&clock_cpu clk_a53_pwr_clk>,
 			 <&clock_cpu clk_a53_pwr_clk>,
+			 <&clock_cpu clk_a53_pwr_clk>,
+			 <&clock_cpu clk_a53_pwr_clk>,
+			 <&clock_cpu clk_a53_pwr_clk>,
+			 <&clock_cpu clk_a53_pwr_clk>,
 			 <&clock_cpu clk_a53_pwr_clk>;
 
 		qcom,cpufreq-table =
@@ -957,8 +1038,11 @@
 			 < 1804800 >,
 			 < 1958400 >,
 			 < 2016000 >,
-			 < 2150400 >,
-			 < 2208000 >;
+			 < 2208000 >,
+			 < 2400000 >,
+			 < 2649000 >,
+			 < 2841000 >,
+			 < 3033600 >;
 	};
 
 	cpubw: qcom,cpubw {
@@ -1018,7 +1102,12 @@
 			 < 1689600  6445>,
 			 < 1804800  7104>,
 			 < 1958400  7104>,
-			 < 2208000  7104>;
+			 < 2016000  7104>,
+			 < 2208000  7104>,
+			 < 2400000  7104>,
+			 < 2649000  7104>,
+			 < 2841000  7104>,
+			 < 3033600  7104>;
 		};
 
 		mincpubw-cpufreq {
@@ -1026,7 +1115,8 @@
 			cpu-to-dev-map =
 				<  652800 1611 >,
 				< 1401600 3221 >,
-				< 2208000 5859 >;
+				< 2208000 5859 >,
+				< 3033600 7104 >;
 		};
 	};
 
@@ -1042,7 +1132,12 @@
 				 < 1689600  6445>,
 				 < 1804800  7104>,
 				 < 1958400  7104>,
-				 < 2208000  7104>;
+				 < 2016000  7104>,
+				 < 2208000  7104>,
+				 < 2400000  7104>,
+				 < 2649000  7104>,
+				 < 2841000  7104>,
+				 < 3033600  7104>;
 	};
 
 	mincpubw_compute: qcom,mincpubw-compute {
@@ -1053,7 +1148,8 @@
 		qcom,core-dev-table =
 				<  652800 1611 >,
 				< 1401600 3221 >,
-				< 2208000 5859 >;
+				< 2208000 5859 >,
+				< 3033600 7104 >;
 	};
 
 	qcom,ipc-spinlock@1905000 {
@@ -1293,9 +1389,9 @@
 			reg = <0x10 8>;
 		};
 
-		dload_type@1c {
+		dload_type@18 {
 			compatible = "qcom,msm-imem-dload-type";
-			reg = <0x1c 4>;
+			reg = <0x18 4>;
 		};
 
 		restart_reason@65c {
@@ -1378,7 +1474,7 @@
 
 	sdhc_1: sdhci@7824900 {
 		compatible = "qcom,sdhci-msm";
-		reg = <0x7824900 0x500>, <0x7824000 0x800>, <0x7824e00 0x200>,
+            reg = <0x7824900 0x500>, <0x7824000 0x800>, <0x7824e00 0x200>,
 			<0x0119d000 0x4>;
 		reg-names = "hc_mem", "core_mem", "cmdq_mem",
 				"tlmm_mem";
@@ -1673,7 +1769,7 @@
 		qcom,qusb-phy-init-seq = <0xf8 0x80
 					0xb3 0x84
 					0x83 0x88
-					0xc0 0x8c
+					0xcd 0x8c
 					0x14 0x9c
 					0x30 0x08
 					0x79 0x0c
@@ -2076,13 +2172,13 @@
 
 };
 
-#include "pm8953-rpm-regulator.dtsi"
-#include "pm8953.dtsi"
-#include "msm8953-regulator.dtsi"
-#include "msm-gdsc-8916.dtsi"
-#include "msm8953-thermal.dtsi"
-#include "msm8953-camera.dtsi"
-#include "msm8953-audio.dtsi"
+#include "../../pm8953-rpm-regulator.dtsi"
+#include "../../pm8953.dtsi"
+#include "../../msm8953-regulator.dtsi"
+#include "../../msm-gdsc-8916.dtsi"
+#include "../../msm8953-thermal.dtsi"
+#include "../../msm8953-camera.dtsi"
+#include "../../msm8953-audio.dtsi"
 
 &gdsc_venus {
 	clock-names = "bus_clk", "core_clk";
