--- a/arch/arm64/boot/dts/qcom/taco/msm8953-taco.dtsi
+++ b/arch/arm64/boot/dts/qcom/taco/msm8953-taco.dtsi
@@ -11,9 +11,9 @@
  * GNU General Public License for more details.
  */
 
-#include "msm8953-audio-mido.dtsi"
-#include "msm8953-general-mido.dtsi"
-#include "msm8953-display-mido.dtsi"
-#include "msm8953-camera-sensor-qrd-mido.dtsi"
-#include "msm8953-pinctrl-mido.dtsi"
-#include "msm8953-memory-mido.dtsi"
+#include "msm8953-audio-taco.dtsi"
+#include "msm8953-general-taco.dtsi"
+#include "msm8953-display-taco.dtsi"
+#include "msm8953-camera-sensor-qrd-taco.dtsi"
+#include "msm8953-pinctrl-taco.dtsi"
+#include "msm8953-memory-taco.dtsi"
