--- a/drivers/input/touchscreen/GT915L/Kconfig
+++ b/drivers/input/touchscreen/GT915L/Kconfig
@@ -1,5 +1,5 @@
 
 config TOUCHSCREEN_GT915L
-	boolean "Goodix GT915L touchpanel driver"
-	depends on CONFIG_INPUT_TOUCHSCREEN
+	tristate "GT915L touchscreens"
+	depends on I2C
 	default n
