--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -545,6 +545,7 @@ CONFIG_USB_CONFIGFS_F_DIAG=y
 CONFIG_USB_CONFIGFS_F_CDEV=y
 CONFIG_USB_CONFIGFS_F_CCID=y
 CONFIG_USB_CONFIGFS_F_QDSS=y
+CONFIG_USB_CONFIGFS_F_UVC=y
 CONFIG_MMC=y
 # CONFIG_MMC_PERF_PROFILING is not set
 # CONFIG_PWRSEQ_EMMC is not set
