--- a/arch/arm64/boot/dts/qcom/taco/msm8953-general-taco.dtsi
+++ b/arch/arm64/boot/dts/qcom/taco/msm8953-general-taco.dtsi
@@ -13,7 +13,8 @@
 &spmi_bus {
 	qcom,pm8953@0 {
 		qcom,power-on@800 {
-			qcom,store-hard-reset-reason;
+            /delete-property/ qcom,store-hard-reset-reason;
+
 			qcom,pon_1 {
 				qcom,support-reset = <1>;
 				qcom,s1-timer = <10256>;
@@ -518,24 +519,5 @@
 &firmware {
 	android {
 		/delete-node/ vbmeta;
-
-		fstab {
-			vendor {
-				dev = "/dev/block/platform/soc/7824900.sdhci/by-name/cust";
-				type = "ext4";
-				mnt_flags = "ro,barrier=1,noatime,discard";
-				fsmgr_flags = "wait";
-				status = "ok";
-			};
-
-			system {
-				compatible = "android,system";
-				dev = "/dev/block/platform/soc/7824900.sdhci/by-name/system";
-				type = "ext4";
-				mnt_flags = "ro,barrier=1,noatime,discard";
-				fsmgr_flags = "wait";
-				status = "ok";
-			};
-		};
 	};
 };
